bloq_stim/tests/snapshots/segment_text_golden__clean_segments.snap
---
source: bloq_stim/tests/segment_text_golden.rs
assertion_line: 36
expression: segments.to_text()
---
QUBIT_COORDS(0, 2) 0
QUBIT_COORDS(1, 1) 1
QUBIT_COORDS(1, 3) 2
QUBIT_COORDS(1, 5) 3
QUBIT_COORDS(2, 2) 4
QUBIT_COORDS(2, 4) 5
QUBIT_COORDS(2, 6) 6
QUBIT_COORDS(3, 1) 7
QUBIT_COORDS(3, 3) 8
QUBIT_COORDS(3, 5) 9
QUBIT_COORDS(4, 0) 10
QUBIT_COORDS(4, 2) 11
QUBIT_COORDS(4, 4) 12
QUBIT_COORDS(5, 1) 13
QUBIT_COORDS(5, 3) 14
QUBIT_COORDS(5, 5) 15
QUBIT_COORDS(6, 4) 16
# node 0: quantum blocks (0,0,0)
R 0 11 5 16
RX 10 4 12 6
R 1 7 13 2 8 14 3 9 15
TICK
CX 10 7 4 2 8 11 3 5 12 9 15 16
TICK
CX 10 13 4 8 7 11 2 5 12 15 14 16
TICK
CX 2 0 4 1 14 11 9 5 12 8 6 3
TICK
CX 1 0 4 7 13 11 8 5 12 14 6 9
TICK
M 0 11 5 16
MX 10 4 12 6
TICK
R 0 11 5 16
RX 10 4 12 6
TICK
CX 10 7 4 2 8 11 3 5 12 9 15 16
TICK
CX 10 13 4 8 7 11 2 5 12 15 14 16
TICK
CX 2 0 4 1 14 11 9 5 12 8 6 3
TICK
CX 1 0 4 7 13 11 8 5 12 14 6 9
TICK
M 0 11 5 16
MX 10 4 12 6
TICK
R 0 11 5 16
RX 10 4 12 6
TICK
CX 10 7 4 2 8 11 3 5 12 9 15 16
TICK
CX 10 13 4 8 7 11 2 5 12 15 14 16
TICK
CX 2 0 4 1 14 11 9 5 12 8 6 3
TICK
CX 1 0 4 7 13 11 8 5 12 14 6 9
TICK
M 0 11 5 16
MX 10 4 12 6
DETECTOR(0, 2) rec[-24]
DETECTOR(4, 2) rec[-23]
DETECTOR(2, 4) rec[-22]
DETECTOR(6, 4) rec[-21]
DETECTOR(4, 0) rec[-20] rec[-12]
DETECTOR(0, 2) rec[-24] rec[-16]
DETECTOR(2, 2) rec[-19] rec[-11]
DETECTOR(4, 2) rec[-23] rec[-15]
DETECTOR(2, 4) rec[-22] rec[-14]
DETECTOR(4, 4) rec[-18] rec[-10]
DETECTOR(6, 4) rec[-21] rec[-13]
DETECTOR(2, 6) rec[-17] rec[-9]
DETECTOR(4, 0) rec[-12] rec[-4]
DETECTOR(0, 2) rec[-16] rec[-8]
DETECTOR(2, 2) rec[-11] rec[-3]
DETECTOR(4, 2) rec[-15] rec[-7]
DETECTOR(2, 4) rec[-14] rec[-6]
DETECTOR(4, 4) rec[-10] rec[-2]
DETECTOR(6, 4) rec[-13] rec[-5]
DETECTOR(2, 6) rec[-9] rec[-1]
TICK
# node 1: quantum blocks (0,0,1)
R 0 11 5 16
RX 10 4 12 6
TICK
CX 10 7 4 2 8 11 3 5 12 9 15 16
TICK
CX 10 13 4 8 7 11 2 5 12 15 14 16
TICK
CX 2 0 4 1 14 11 9 5 12 8 6 3
TICK
CX 1 0 4 7 13 11 8 5 12 14 6 9
TICK
M 0 11 5 16
MX 10 4 12 6
TICK
R 0 11 5 16
RX 10 4 12 6
TICK
CX 10 7 4 2 8 11 3 5 12 9 15 16
TICK
CX 10 13 4 8 7 11 2 5 12 15 14 16
TICK
CX 2 0 4 1 14 11 9 5 12 8 6 3
TICK
CX 1 0 4 7 13 11 8 5 12 14 6 9
TICK
M 0 11 5 16
MX 10 4 12 6
TICK
R 0 11 5 16
RX 10 4 12 6
TICK
CX 10 7 4 2 8 11 3 5 12 9 15 16
TICK
CX 10 13 4 8 7 11 2 5 12 15 14 16
TICK
CX 2 0 4 1 14 11 9 5 12 8 6 3
TICK
CX 1 0 4 7 13 11 8 5 12 14 6 9
TICK
M 0 11 5 16
MX 10 4 12 6
M 1 7 13 2 8 14 3 9 15
DETECTOR(4, 0) rec[-29] rec[-21]
DETECTOR(0, 2) rec[-33] rec[-25]
DETECTOR(2, 2) rec[-28] rec[-20]
DETECTOR(4, 2) rec[-32] rec[-24]
DETECTOR(2, 4) rec[-31] rec[-23]
DETECTOR(4, 4) rec[-27] rec[-19]
DETECTOR(6, 4) rec[-30] rec[-22]
DETECTOR(2, 6) rec[-26] rec[-18]
DETECTOR(4, 0) rec[-21] rec[-13]
DETECTOR(0, 2) rec[-25] rec[-17]
DETECTOR(2, 2) rec[-20] rec[-12]
DETECTOR(4, 2) rec[-24] rec[-16]
DETECTOR(2, 4) rec[-23] rec[-15]
DETECTOR(4, 4) rec[-19] rec[-11]
DETECTOR(6, 4) rec[-22] rec[-14]
DETECTOR(2, 6) rec[-18] rec[-10]
DETECTOR(0, 2) rec[-17] rec[-9] rec[-6]
DETECTOR(4, 2) rec[-16] rec[-8] rec[-7] rec[-5] rec[-4]
DETECTOR(2, 4) rec[-15] rec[-6] rec[-5] rec[-3] rec[-2]
DETECTOR(6, 4) rec[-14] rec[-4] rec[-1]
DETECTOR(0, 2) rec[-41] rec[-33]
DETECTOR(4, 2) rec[-40] rec[-32]
DETECTOR(2, 4) rec[-39] rec[-31]
DETECTOR(6, 4) rec[-38] rec[-30]
DETECTOR(4, 0) rec[-37] rec[-29]
DETECTOR(2, 2) rec[-36] rec[-28]
DETECTOR(4, 4) rec[-35] rec[-27]
DETECTOR(2, 6) rec[-34] rec[-26]
TICK
# node 3: observable 0 generator 0
OBSERVABLE_INCLUDE(0) rec[-6] rec[-5] rec[-4]
